gateway/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  progressDeadlineSeconds: 120
  template:
    metadata:
      name: gateway
      labels:
        app: gateway
    spec:
      hostAliases:
      - ip: "10.0.2.2"
        hostnames:
          - "api.gateway.com"
      containers:
      - name: gateway
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "256Mi"
        image: authentication:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
